Shopping cart handeling
- Commited by Vaas W.P.S.D. -IT25101123